--- a/Web_DynamicConfiguration/Pages/_Layout.cshtml
+++ b/Web_DynamicConfiguration/Pages/_Layout.cshtml
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -30,9 +30,6 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +38,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Web_DynamicConfiguration</p>
+            <p>&copy; 2019 - Web_DynamicConfiguration</p>
         </footer>
     </div>
 
